<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="1" >
                <Button
                    android:id="@+id/sensor_data"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:text="@string/sensor_data"
                    android:onClick="sensor_data" />
            </LinearLayout>

            <LinearLayout
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/camera_data"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:text="@string/camera_data"
                    android:onClick="camera_data"/>

            </LinearLayout>

            <LinearLayout
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/lights"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/lights"
                    android:onClick="lights" />

            </LinearLayout>





        </LinearLayout>

        <LinearLayout
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >


            <LinearLayout
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1" >

                </LinearLayout>

                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1" >

                    <Button
                        android:id="@+id/left_top"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="40dp"
                        android:text="@string/left_top"
                        android:onClick="left_top"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1" >

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="1" >
                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1" >
                    <Button
                        android:id="@+id/left_left"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="40dp"
                        android:text="@string/left_left"
                        android:onClick="left_left" />
                </LinearLayout>

                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1" >



                </LinearLayout>

                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1" >
                    <Button
                        android:id="@+id/left_right"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="40dp"
                        android:text="@string/left_right"
                        android:onClick="left_right" />

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="1" >
                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1" >

                </LinearLayout>

                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1" >

                    <Button
                        android:id="@+id/left_bottom"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="40dp"
                        android:text="@string/left_bottom"
                        android:onClick="left_bottom" />

                </LinearLayout>

                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1" >

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="2" >
        <!--
        <TextView
            android:id="@+id/sensor_data_output"
            android:layout_height="match_parent"
            android:layout_width="match_parent" />
        -->

        <VideoView
            android:id="@+id/videoview"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />



    </LinearLayout>
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="1" >
                <TextView
                    android:id="@+id/camera_status"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/camera_status" />

            </LinearLayout>
            <LinearLayout
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="1" >
                <TextView
                    android:id="@+id/sensor_status"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/sensor_status" />
            </LinearLayout>
            <LinearLayout
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/network_status"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/network_status" />

            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >


            <LinearLayout
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1" >

                </LinearLayout>

                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1" >

                    <Button
                        android:id="@+id/right_top"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="40dp"
                        android:text="@string/right_top"
                        android:onClick="right_top"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1" >

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="1" >
                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1" >
                    <Button
                        android:id="@+id/right_left"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="40dp"
                        android:text="@string/right_left"
                        android:onClick="right_left"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1" >



                </LinearLayout>

                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1" >
                    <Button
                        android:id="@+id/right_right"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="40dp"
                        android:text="@string/right_right"
                        android:onClick="right_right"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="1" >
                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1" >

                </LinearLayout>

                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1" >

                    <Button
                        android:id="@+id/right_bottom"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="40dp"
                        android:text="@string/right_bottom"
                        android:onClick="right_bottom"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1" >

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
